--- a/self_attention.ipynb
+++ b/self_attention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJPqHrKSw6zS0i53WgQWW7",
+      "authorship_tag": "ABX9TyPhH5KWcodoo/m1DxJfpi8s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -680,6 +680,392 @@
             "        [0.2280, 0.7368],\n",
             "        [0.2275, 0.7362],\n",
             "        [0.2275, 0.7360]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "\n",
+        "class SelfAttention_v2(nn.Module):\n",
+        "\n",
+        "  def __init__(self, d_in, d_out, qkv_bias=False):\n",
+        "    super().__init__()\n",
+        "    self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "    self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "    self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    queries = self.W_query(x)\n",
+        "    keys = self.W_key(x)\n",
+        "    values = self.W_value(x)\n",
+        "\n",
+        "    attn_scores = queries @keys.T\n",
+        "    attn_weights = torch.softmax(attn_scores/ keys.shape[-1]**0.5, dim=-1)\n",
+        "\n",
+        "    context_vec = attn_weights @values\n",
+        "    return context_vec"
+      ],
+      "metadata": {
+        "id": "FRn-J5WrHEZb"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d_in = inputs.shape[1]\n",
+        "d_out = 2\n",
+        "\n",
+        "torch.manual_seed(789)\n",
+        "sa_v2 = SelfAttention_v2(d_in, d_out)\n",
+        "print(sa_v2(inputs))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B5b3cw_OJ9HW",
+        "outputId": "20858389-b5c0-4955-96d9-db2c7d8946eb"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-0.0184,  0.1495],\n",
+            "        [-0.0180,  0.1502],\n",
+            "        [-0.0183,  0.1495],\n",
+            "        [-0.0178,  0.1505],\n",
+            "        [-0.0177,  0.1506],\n",
+            "        [-0.0177,  0.1507]], grad_fn=<MmBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "queries = sa_v2.W_query(inputs)\n",
+        "keys = sa_v2.W_key(inputs)\n",
+        "attn_scores = queries @keys.T\n",
+        "attn_weights = torch.softmax(attn_scores/ keys.shape[-1]**0.5, dim=-1)\n",
+        "print(attn_weights)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N5n5yFaNMDd0",
+        "outputId": "df8c19c9-551a-4fce-9e8c-bf2216180542"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.1582, 0.1729, 0.1456, 0.1732, 0.1771, 0.1730],\n",
+            "        [0.1590, 0.1739, 0.1444, 0.1738, 0.1771, 0.1718],\n",
+            "        [0.1568, 0.1734, 0.1433, 0.1739, 0.1785, 0.1741],\n",
+            "        [0.1570, 0.1750, 0.1403, 0.1751, 0.1793, 0.1732],\n",
+            "        [0.1594, 0.1745, 0.1435, 0.1742, 0.1772, 0.1711],\n",
+            "        [0.1600, 0.1744, 0.1441, 0.1741, 0.1767, 0.1707]],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Causal attention"
+      ],
+      "metadata": {
+        "id": "JNgrjEXVQLQi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_length = inputs.shape[0]\n",
+        "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+        "print(mask_simple)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ipbZfuhNPEJ",
+        "outputId": "8bb36e17-f403-4aa0-9b3f-7ea3f347e4c9"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 0., 0., 0., 0., 0.],\n",
+            "        [1., 1., 0., 0., 0., 0.],\n",
+            "        [1., 1., 1., 0., 0., 0.],\n",
+            "        [1., 1., 1., 1., 0., 0.],\n",
+            "        [1., 1., 1., 1., 1., 0.],\n",
+            "        [1., 1., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "masked_simple = attn_weights * mask_simple\n",
+        "print(masked_simple)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q8tK7z78NkKZ",
+        "outputId": "1e8c1f25-84b3-4114-f991-e83dfe91c226"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.1582, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1590, 0.1739, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1568, 0.1734, 0.1433, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.1570, 0.1750, 0.1403, 0.1751, 0.0000, 0.0000],\n",
+            "        [0.1594, 0.1745, 0.1435, 0.1742, 0.1772, 0.0000],\n",
+            "        [0.1600, 0.1744, 0.1441, 0.1741, 0.1767, 0.1707]],\n",
+            "       grad_fn=<MulBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "row_sums = masked_simple.sum(dim=1, keepdim=True)\n",
+        "print(row_sums.shape)\n",
+        "masked_simple_norm = masked_simple / row_sums\n",
+        "print(masked_simple_norm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8cLao3ImN5Ii",
+        "outputId": "720ebbd8-7848-4250-b5d5-291e26f6c9bd"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([6, 1])\n",
+            "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.4777, 0.5223, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.3312, 0.3662, 0.3026, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.2425, 0.2703, 0.2167, 0.2704, 0.0000, 0.0000],\n",
+            "        [0.1923, 0.2105, 0.1732, 0.2102, 0.2138, 0.0000],\n",
+            "        [0.1600, 0.1744, 0.1441, 0.1741, 0.1767, 0.1707]],\n",
+            "       grad_fn=<DivBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(attn_scores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9PCwbLUmQoCg",
+        "outputId": "86093580-1456-4c57-de58-24b0da82d9b0"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 0.1278,  0.2536,  0.0104,  0.2559,  0.2873,  0.2540],\n",
+            "        [ 0.1236,  0.2499, -0.0124,  0.2494,  0.2758,  0.2329],\n",
+            "        [ 0.1458,  0.2882,  0.0182,  0.2916,  0.3285,  0.2934],\n",
+            "        [ 0.1517,  0.3052, -0.0074,  0.3055,  0.3393,  0.2904],\n",
+            "        [ 0.1222,  0.2499, -0.0263,  0.2477,  0.2714,  0.2224],\n",
+            "        [ 0.1160,  0.2386, -0.0314,  0.2357,  0.2571,  0.2075]],\n",
+            "       grad_fn=<MmBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mask=torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+        "print(mask)\n",
+        "attn_scores = attn_scores/(2**0.5)\n",
+        "masked=attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+        "print(masked)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "16bXqqIQQuiJ",
+        "outputId": "9b0508d5-c06b-4671-b5da-6a9e8b21bb1b"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0., 1., 1., 1., 1., 1.],\n",
+            "        [0., 0., 1., 1., 1., 1.],\n",
+            "        [0., 0., 0., 1., 1., 1.],\n",
+            "        [0., 0., 0., 0., 1., 1.],\n",
+            "        [0., 0., 0., 0., 0., 1.],\n",
+            "        [0., 0., 0., 0., 0., 0.]])\n",
+            "tensor([[ 0.0904,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+            "        [ 0.0874,  0.1767,    -inf,    -inf,    -inf,    -inf],\n",
+            "        [ 0.1031,  0.2038,  0.0129,    -inf,    -inf,    -inf],\n",
+            "        [ 0.1073,  0.2158, -0.0053,  0.2160,    -inf,    -inf],\n",
+            "        [ 0.0864,  0.1767, -0.0186,  0.1751,  0.1919,    -inf],\n",
+            "        [ 0.0820,  0.1687, -0.0222,  0.1667,  0.1818,  0.1467]],\n",
+            "       grad_fn=<MaskedFillBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attn_weights = torch.softmax(masked / keys.shape[-1]**0.5, dim=1)\n",
+        "print(attn_weights)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dmy3tDKyRJ4p",
+        "outputId": "4dca66c1-6c4b-4b35-f656-03ee2f544b26"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.4842, 0.5158, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.3320, 0.3565, 0.3115, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.2449, 0.2644, 0.2262, 0.2645, 0.0000, 0.0000],\n",
+            "        [0.1947, 0.2075, 0.1808, 0.2073, 0.2098, 0.0000],\n",
+            "        [0.1620, 0.1722, 0.1505, 0.1720, 0.1738, 0.1696]],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "example = torch.ones(context_length, context_length)\n",
+        "print(example)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SoT0MPPQTQK6",
+        "outputId": "ed37a8cd-4f75-4352-f3b4-a5df56320b8d"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.],\n",
+            "        [1., 1., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "dropout = torch.nn.Dropout(0.5)\n",
+        "example = torch.ones(6,6)\n",
+        "print(dropout(example))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4GQsqsf8TVwN",
+        "outputId": "57e7249e-ed0b-47b2-d0d4-d2c75626b6bd"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[2., 2., 0., 2., 2., 0.],\n",
+            "        [0., 0., 0., 2., 0., 2.],\n",
+            "        [2., 2., 2., 2., 0., 2.],\n",
+            "        [0., 2., 2., 0., 0., 2.],\n",
+            "        [0., 2., 0., 2., 0., 2.],\n",
+            "        [0., 2., 2., 2., 2., 0.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "print(dropout(attn_weights))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CR0EnVuKTqjc",
+        "outputId": "5989f505-030a-4968-e6f1-eb560f197145"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.6640, 0.7130, 0.6230, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.5289, 0.4524, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.4150, 0.0000, 0.4146, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.3444, 0.3009, 0.3439, 0.3476, 0.0000]],\n",
+            "       grad_fn=<MulBackward0>)\n"
           ]
         }
       ]
