--- a/self_attention.ipynb
+++ b/self_attention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhH5KWcodoo/m1DxJfpi8s",
+      "authorship_tag": "ABX9TyMMExBuHtciZv/5G2byzij0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 40,
       "metadata": {
         "id": "o-Z0wvYUl7II",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "454b8227-7506-48f7-bf04-d35301fcae44"
+        "outputId": "6f151281-00ac-46fd-acbe-12a794fdbb20"
       },
       "outputs": [
         {
@@ -119,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0czpWpel6UaE",
-        "outputId": "5249d2b1-7358-4524-ad49-61fcb6a2cb5f"
+        "outputId": "35fed77e-39b6-43ee-af2b-058e4af68343"
       },
-      "execution_count": 62,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8fTv8yxL7ICO",
-        "outputId": "554d0723-f701-4457-9f53-7ce3f40d73f8"
+        "outputId": "9355abff-88a1-404a-c9bb-c6bc1615b988"
       },
-      "execution_count": 63,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fUgbWSgt8fXo",
-        "outputId": "cfe94373-b23b-4e6a-c747-91f870f27c18"
+        "outputId": "3ad3ab8c-ed82-4595-8aab-34f09ec53055"
       },
-      "execution_count": 64,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,9 +208,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MS6x9qc_9qo4",
-        "outputId": "d4f31099-df41-45ee-f89b-ad499e84e707"
+        "outputId": "c9ac3741-e5f8-42ce-9515-e495f52047ab"
       },
-      "execution_count": 65,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lWzjgBG2_O1b",
-        "outputId": "70cc4884-77d4-4326-cb3a-1068ce15159c"
+        "outputId": "6e7e38ff-5c83-4ece-da5c-23423b60cd18"
       },
-      "execution_count": 66,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9WJ2TUD2-9ZR",
-        "outputId": "79b49463-82e0-4f2c-fd34-30940d57908e"
+        "outputId": "0b0dc0b2-1362-4fcc-91c0-f1c13a523f57"
       },
-      "execution_count": 67,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,9 +323,9 @@
           "height": 442
         },
         "id": "YysZFCx-_3Lv",
-        "outputId": "d2bdcd4d-f38f-4082-fdee-d1c492127e86"
+        "outputId": "914701f5-1d50-4711-b574-4838f8b046cd"
       },
-      "execution_count": 68,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,9 +363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cQXcvxmiawqu",
-        "outputId": "64efa9c5-90a1-4a81-824a-8db2c5ee4696"
+        "outputId": "0e83cef6-3e16-4f05-80ec-8a754ceafc3d"
       },
-      "execution_count": 69,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,9 +393,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LArD1Pd4a996",
-        "outputId": "37f7184b-9c0e-4944-8ad0-b4c220a73cf7"
+        "outputId": "7f2f831b-3b7e-4b27-d7ed-45db68c2968f"
       },
-      "execution_count": 70,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,9 +425,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qmF97qdUbP8o",
-        "outputId": "478d656e-4678-4ad3-d89d-3e04430b3d8a"
+        "outputId": "8f393f63-6d57-44cf-e60d-e8d2eb7ab504"
       },
-      "execution_count": 71,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,9 +460,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nvLVn8NvcGiH",
-        "outputId": "7c28c8cb-5868-458e-de6f-c81c855db429"
+        "outputId": "5f8d6e60-7e06-4a2c-833e-e2d1946fe099"
       },
-      "execution_count": 72,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M3ikyNpO8URo",
-        "outputId": "3bf54f02-2b8a-4c26-ebb9-7e8d73d4f057"
+        "outputId": "223fd5ee-0949-4ed3-bb99-02fb23edbd1c"
       },
-      "execution_count": 73,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,9 +529,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I5lhs1TW83AS",
-        "outputId": "a0acfbc5-21ad-4417-d1a1-adf6bd26969c"
+        "outputId": "ce8b35cf-2fa3-4fde-eacc-e7dde255e731"
       },
-      "execution_count": 74,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,9 +553,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XmOkMtND9AhI",
-        "outputId": "a9eafa7d-14bd-48fe-f16f-c7fa34bdcca4"
+        "outputId": "10a100ae-d748-4c30-8012-9edee9a3c3d1"
       },
-      "execution_count": 75,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RIIL8gKm9Oes",
-        "outputId": "1af04fd0-2c39-4de9-a86c-897f56cdbc9d"
+        "outputId": "5bcc783e-e411-423d-dc53-1ed2a42c80f4"
       },
-      "execution_count": 76,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,9 +613,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jX0gsVIr94_v",
-        "outputId": "9b5e6e24-1dd2-48e8-c86d-bb1bd6877eef"
+        "outputId": "33252063-d6dd-44cc-c00f-ce01d268296c"
       },
-      "execution_count": 77,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,9 +642,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aYLpgXsoAucc",
-        "outputId": "37e66368-3d09-4c88-a862-4293984efed0"
+        "outputId": "cde01362-71c4-4d9a-9281-143c544bad3e"
       },
-      "execution_count": 78,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,9 +666,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0Xfy_i6iBEzL",
-        "outputId": "06c8f491-25d7-4eca-f705-893dd993fa53"
+        "outputId": "0ff8acf7-f404-4152-dcc1-0f83b4130e71"
       },
-      "execution_count": 79,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +711,7 @@
       "metadata": {
         "id": "FRn-J5WrHEZb"
       },
-      "execution_count": 82,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -729,9 +729,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B5b3cw_OJ9HW",
-        "outputId": "20858389-b5c0-4955-96d9-db2c7d8946eb"
+        "outputId": "20429bb3-af78-49a6-cdcd-4c4a70cfeefc"
       },
-      "execution_count": 83,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,9 +761,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N5n5yFaNMDd0",
-        "outputId": "df8c19c9-551a-4fce-9e8c-bf2216180542"
+        "outputId": "65d1a2c1-9282-4cc3-c4f4-fc2a441636f4"
       },
-      "execution_count": 84,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,9 +801,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ipbZfuhNPEJ",
-        "outputId": "8bb36e17-f403-4aa0-9b3f-7ea3f347e4c9"
+        "outputId": "23b3d5dc-29b0-4369-de81-5f81d15f5a3d"
       },
-      "execution_count": 85,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,9 +830,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q8tK7z78NkKZ",
-        "outputId": "1e8c1f25-84b3-4114-f991-e83dfe91c226"
+        "outputId": "759a42fc-600d-4048-9e0d-544eec90f00b"
       },
-      "execution_count": 86,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,9 +862,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8cLao3ImN5Ii",
-        "outputId": "720ebbd8-7848-4250-b5d5-291e26f6c9bd"
+        "outputId": "7716e905-7ea1-4873-acc8-cd26f1bfe2f3"
       },
-      "execution_count": 87,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,9 +892,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9PCwbLUmQoCg",
-        "outputId": "86093580-1456-4c57-de58-24b0da82d9b0"
+        "outputId": "1c19af8a-f2cc-4ea7-ce2c-1fc97fe21ec5"
       },
-      "execution_count": 88,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,9 +925,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "16bXqqIQQuiJ",
-        "outputId": "9b0508d5-c06b-4671-b5da-6a9e8b21bb1b"
+        "outputId": "883caba9-acd8-4b34-d563-2c01bc169e5c"
       },
-      "execution_count": 92,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,9 +961,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dmy3tDKyRJ4p",
-        "outputId": "4dca66c1-6c4b-4b35-f656-03ee2f544b26"
+        "outputId": "1c2fbb7b-e620-483a-e774-0e23dfaf6e50"
       },
-      "execution_count": 93,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,9 +991,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SoT0MPPQTQK6",
-        "outputId": "ed37a8cd-4f75-4352-f3b4-a5df56320b8d"
+        "outputId": "a54e2a25-f29b-482d-b812-ce6ef0772456"
       },
-      "execution_count": 94,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,9 +1022,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4GQsqsf8TVwN",
-        "outputId": "57e7249e-ed0b-47b2-d0d4-d2c75626b6bd"
+        "outputId": "f436fabe-b2e4-4761-d838-4eb25f0a9f2a"
       },
-      "execution_count": 95,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,9 +1051,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CR0EnVuKTqjc",
-        "outputId": "5989f505-030a-4968-e6f1-eb560f197145"
+        "outputId": "c9238e5e-cae3-4976-f53d-86fa5617c716"
       },
-      "execution_count": 96,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,6 +1066,187 @@
             "        [0.0000, 0.4150, 0.0000, 0.4146, 0.0000, 0.0000],\n",
             "        [0.0000, 0.3444, 0.3009, 0.3439, 0.3476, 0.0000]],\n",
             "       grad_fn=<MulBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Multi-head attention"
+      ],
+      "metadata": {
+        "id": "4XbzcxZC8gDy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CausalAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self, d_in, d_out, context_length, dropout, qkv_bias=False):\n",
+        "    super().__init__()\n",
+        "    self.d_out = d_out\n",
+        "    self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "    self.W_key   = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "    self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "    self.register_buffer(\"mask\", torch.triu(torch.ones(context_length, context_length), diagonal=1))\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    b, num_tokens, d_in = x.shape\n",
+        "\n",
+        "    keys = self.W_key(x)\n",
+        "    queries = self.W_query(x)\n",
+        "    values = self.W_value(x)\n",
+        "\n",
+        "    attn_scores = queries @ keys.transpose(1,2)\n",
+        "    attn_scores.masked_fill_(\n",
+        "        self.mask.bool()[:num_tokens, :num_tokens], -torch.inf\n",
+        "    )\n",
+        "    attn_weights = torch.softmax(\n",
+        "        attn_scores / (keys.shape[-1] ** 0.5), dim=-1\n",
+        "    )\n",
+        "    attn_weights = self.dropout(attn_weights)\n",
+        "\n",
+        "    context_vec = attn_weights @ values\n",
+        "    return context_vec"
+      ],
+      "metadata": {
+        "id": "8tTvXEmk8iVl"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d_in = inputs.shape[-1]\n",
+        "d_out = 2\n",
+        "print(d_in, d_out)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4X9rmEmJCWb6",
+        "outputId": "71de8804-f97b-4042-d8ac-c0cc5a25b6d2"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch = torch.stack((inputs,inputs,), dim=0)\n",
+        "print(batch.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vjI1seKdCe_6",
+        "outputId": "b78e3c49-0bba-4d3d-ac0d-da5dc2482d2d"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([2, 6, 3])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MultiHeadAttentionWrapper(nn.Module):\n",
+        "  def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+        "    super().__init__()\n",
+        "    self.heads= nn.ModuleList(\n",
+        "        [CausalAttention(d_in, d_out, context_length, dropout, qkv_bias)\n",
+        "        for _ in range(num_heads)]\n",
+        "    )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return torch.cat([head(x) for head in self.heads], dim=-1)"
+      ],
+      "metadata": {
+        "id": "bddn6RvjCzQ9"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(123)\n",
+        "context_length = batch.shape[1]\n",
+        "d_in, d_out = 3,2\n",
+        "mha = MultiHeadAttentionWrapper(d_in, d_out, context_length, 0.0, num_heads=4)"
+      ],
+      "metadata": {
+        "id": "FFVmv-_aF-w0"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_vecs = mha(batch)\n",
+        "print(context_vecs)\n",
+        "print(context_vecs.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KVodyaakGClm",
+        "outputId": "4d49f3b2-ed2f-4cb8-ef66-bed26bcfb3ad"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[-0.5762, -0.1627,  0.5569,  0.3635,  0.5928,  0.2207, -0.3000,\n",
+            "           0.5321],\n",
+            "         [-0.5650, -0.0630,  0.5599,  0.3006,  0.5806,  0.2327, -0.3637,\n",
+            "           0.5146],\n",
+            "         [-0.5472, -0.1226,  0.5285,  0.3435,  0.5612,  0.2336, -0.3496,\n",
+            "           0.5499],\n",
+            "         [-0.5787, -0.0943,  0.5621,  0.3388,  0.5932,  0.2477, -0.3812,\n",
+            "           0.5682],\n",
+            "         [-0.5593, -0.0436,  0.5509,  0.3046,  0.5711,  0.2495, -0.4075,\n",
+            "           0.5516],\n",
+            "         [-0.5287, -0.0033,  0.5277,  0.2743,  0.5374,  0.2492, -0.4281,\n",
+            "           0.5372]],\n",
+            "\n",
+            "        [[-0.5762, -0.1627,  0.5569,  0.3635,  0.5928,  0.2207, -0.3000,\n",
+            "           0.5321],\n",
+            "         [-0.5650, -0.0630,  0.5599,  0.3006,  0.5806,  0.2327, -0.3637,\n",
+            "           0.5146],\n",
+            "         [-0.5472, -0.1226,  0.5285,  0.3435,  0.5612,  0.2336, -0.3496,\n",
+            "           0.5499],\n",
+            "         [-0.5787, -0.0943,  0.5621,  0.3388,  0.5932,  0.2477, -0.3812,\n",
+            "           0.5682],\n",
+            "         [-0.5593, -0.0436,  0.5509,  0.3046,  0.5711,  0.2495, -0.4075,\n",
+            "           0.5516],\n",
+            "         [-0.5287, -0.0033,  0.5277,  0.2743,  0.5374,  0.2492, -0.4281,\n",
+            "           0.5372]]], grad_fn=<CatBackward0>)\n",
+            "torch.Size([2, 6, 8])\n"
           ]
         }
       ]
