--- a/movie_recommender_system.ipynb
+++ b/movie_recommender_system.ipynb
@@ -31,15 +31,16 @@
         "XzkvOF24YOH-",
         "MaH7tz5wYOIJ",
         "L_kYDQn_YOIP",
+        "xAoZ42uwYOIa",
         "9338457c",
         "DtT0cwnGYOIi",
         "esuF0dLLYOIp",
         "87a63a46",
+        "yicEk-wjYOI5",
         "-v0Ha9Ndnp65",
         "2510456e",
         "71bb4833",
         "e5e5f727",
-        "3868ea03",
         "02637a25"
       ],
       "include_colab_link": true
@@ -4999,9 +5000,10 @@
       "metadata": {
         "id": "5LjXBqD8YOI7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 216
         },
-        "outputId": "88177d92-fec4-430b-c5b1-d2ff2b5d6b49",
+        "outputId": "fef258aa-e094-4b1c-c48c-1f4e40a21673",
         "collapsed": true
       },
       "source": [
@@ -5013,22 +5015,17 @@
         "for i in similar_movies:\n",
         "    print(movie_titles[i])"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Because you watched Toy Story (1995):\n",
-            "Home Alone (1990)\n",
-            "Jurassic Park (1993)\n",
-            "Aladdin (1992)\n",
-            "Willy Wonka & the Chocolate Factory (1971)\n",
-            "Back to the Future (1985)\n",
-            "Forrest Gump (1994)\n",
-            "Groundhog Day (1993)\n",
-            "Star Wars: Episode IV - A New Hope (1977)\n",
-            "Princess Bride, The (1987)\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'find_similar_movies' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-319793798.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmovie_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msimilar_movies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_similar_movies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovie_mapper\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovie_inv_mapper\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetric\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cosine'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmovie_title\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmovie_titles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmovie_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Because you watched {movie_title}:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'find_similar_movies' is not defined"
           ]
         }
       ]
@@ -5873,11 +5870,11 @@
         "* https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/45530.pdf\n",
         "* https://www.youtube.com/watch?v=_uhU7s9kOEM\n",
         "\n",
-        "###Study NCF closely:\n",
+        "1) Integrate NCF with Gradio\n",
         "\n",
-        "###Evaluate models:\n",
+        "2) Evaluate models\n",
         "\n",
-        "### Show embeddings visually:"
+        "3) Show embeddings visually"
       ],
       "metadata": {
         "id": "Qu6IWNTjoYe2"
